--- a/Bobor Pucuk Labu.html
+++ b/Bobor Pucuk Labu.html
@@ -1,6 +1,4 @@
-<h2>9. Bobor pucuk labu.</h2>
-<p><a href="https://www.brilio.net/foto/view/static/www/assets/v2/img/default-1050x700.jpg" target="_blank" rel="noopener"><img class="lazy" style="display: block; margin-left: auto; margin-right: auto; width: 100%; height: auto;" title="Resep masakan rumahan sederhana &copy; 2021 brilio.net" src="https://cdn-brilio-net.akamaized.net/news/2021/07/09/209406/1513954-resep-masakan-rumahan-sederhana.png" alt="Resep masakan rumahan sederhana &copy; 2021 brilio.net" data-src="https://cdn-brilio-net.akamaized.net/news/2021/07/09/209406/1513954-resep-masakan-rumahan-sederhana.png" /></a></p>
-<p style="text-align: center; margin-bottom: 50px;"><em>&nbsp;</em></p>
+<h2>9. Bobor pucuk labu.<em>&nbsp;</em></h2>
 <p><strong>Bahan:</strong></p>
 <p>- Pucuk labu</p>
 <p>- 2 cabai merah keriting</p>
