Update Stik cumi goreng havermout.html

--- a/Stik cumi goreng havermout.html
+++ b/Stik cumi goreng havermout.html
@@ -4,7 +4,7 @@
     <article id="article-content" class="content-post-description split-page-available">
     <div class="split-page split-page1 open" data-target="1">
     <div class="split-page split-page3 open" data-target="3">
-    <h2>3. Stik cumi goreng havermout</h2>
+    <h2>Stik cumi goreng havermout</h2>
     <p><strong>Bahan pertama:</strong></p>
     <ul>
     <li>200 gr cumi, potong panjang</li>
